--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "@aptos-labs/wallet-adapter-nextjs-example",
-  "version": "0.4.2",
+  "name": "@manahippo/wallet-nextjs",
+  "version": "0.1.0",
   "private": true,
-  "license": "Apache-2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@aptos-labs/wallet-adapter-ant-design": "^1.0.0",
-    "@aptos-labs/wallet-adapter-mui-design": "^0.1.1",
-    "@aptos-labs/wallet-adapter-react": "^0.2.4",
-    "@blocto/aptos-wallet-adapter-plugin": "^0.1.2",
-    "@martianwallet/aptos-wallet-adapter": "^0.0.3",
-    "@nightlylabs/aptos-wallet-adapter-plugin": "0.2.12",
-    "@openblockhq/aptos-wallet-adapter": "^0.1.5",
-    "@pontem/wallet-adapter-plugin": "^0.1.4",
-    "@rise-wallet/wallet-adapter": "^0.1.2",
-    "@tp-lab/aptos-wallet-adapter": "^1.0.1",
-    "@trustwallet/aptos-wallet-adapter": "^0.1.6",
-    "@welldone-studio/aptos-wallet-adapter": "^0.1.2",
-    "antd": "^5.1.2",
-    "aptos": "^1.3.17",
-    "fewcha-plugin-wallet-adapter": "^0.1.2",
-    "msafe-plugin-wallet-adapter": "^0.1.0",
-    "next": "13.0.0",
-    "petra-plugin-wallet-adapter": "^0.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@ant-design/icons": "^4.7.0",
+    "@manahippo/aptos-wallet-adapter": "^1.0.10",
+    "@openblockhq/dappsdk": "^5.0.0",
+    "antd": "^4.21.7",
+    "aptos": "^1.3.14",
+    "next": "12.2.5",
+    "react": "^18.X.X || 17.X.X",
+    "react-dom": "^18.X.X || 17.X.X"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
+    "@types/node": "18.7.6",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.15.0",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.5.3"
+    "eslint": "8.22.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.6",
+    "typescript": "4.7.4"
   }
 }
